# audio_and_video_from_youtube

./: ..env.swp  Dockerfile  README_RUS.md  audio.py  config.py  conftest.py  constants.py  docker-compose.yml  generate_cookies.py  install_docker.sh  main.py  next_steps_plan.md  nginx.conf  pyproject.toml  redis_lock.py  storage-nginx.conf  test_db.py  user1@82.202.142.16  web_server.py
.github/workflows/: cd.yml  ci.yml
clients/: actionersLeg.py  async_user_actionefffr.py  async_user_actioner.py  pg_client.py  storage_client.py  telegram_client.py
cookies/: updater.py
handlers/: bot.py
lib/browser_cookie3/: __init__.py
tests/: test_redis_lock.py
