[project]
name = "youtube_downloader_bot"
version = "0.1.0"
description = "A Telegram bot to download audio and video from YouTube."
authors = [
    {name = "mylendad", email = "karpov.vlg@gmail.com"},
]
dependencies = [
    "aiogram",
    "yt-dlp",
    "APScheduler",
    "redis",
    "envparse",
    "browser-cookie3",
    "psycopg2-binary",
    "google-api-python-client",
    "cookies"
]
