[project]
name = "youtube_downloader_bot"
version = "0.1.0"
description = "A Telegram bot to download audio and video from YouTube."
authors = [
    {name = "mylendad", email = "karpov.vlg@gmail.com"},
]
dependencies = [
    "aiogram==3.8.0",
    "asyncpg==0.29.0",
    "yt-dlp==2025.11.12",
    "APScheduler==3.10.4",
    "redis==5.0.7",
    "envparse==0.2.0",
    "browser-cookie3==0.19.1",
    "loguru==0.7.2",
    "google-api-python-client==2.134.0",
    "psycopg2-binary==2.9.9",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.23.5",
    "asyncssh==2.14.2",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]
